# webrpc

./: Cargo.toml
.github/workflows/: rust.yml
src/: client.rs  main.rs  server.rs  services.rs
